renaming a few variables in js and html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	</head> 
  
 	<!-- Underscore Template for List of issues -->
-	<script type="text/template" id="template-rails-issues">
+	<script type="text/template" id="template-issues">
 		<table style="width: auto;" class="table table-hover">
 			<thead>
 				<tr>
@@ -63,7 +63,7 @@
 
 
 	<!-- Underscore Template for an Issue Detail -->
-	<script type="text/template" id="template-rails-issue-detail">
+	<script type="text/template" id="template-issue-detail">
 		
 			<div class="panel panel-default">
 			   <div class="panel-heading">
@@ -129,7 +129,7 @@
 			<!-- ----------------------------- -->
 			<!-- Spot on the page we'll update -->
 			<!-- ----------------------------- -->
-			<div id="rails-app-target"></div>
+			<div id="issues-app-target"></div>
 
       </div>
 
